# b-fast

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  benchmark_visual.py  build_docs.sh  debug_cache.py  detailed_benchmark.py  main.py  mkdocs.yml  profile_bfast.py  pure_test.py  pyproject.toml  test_10k.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: auto-label.yml  docs.yml  release.yml  tests.yml  zizmor.yml
benchmarks/: pure_test.py  test_10k.py  test_extended_types.py  test_final.py  test_round_trip.py
client-ts/: README.md  index.ts  lz4js.d.ts  package-lock.json  package.json  tsconfig.json
client-ts/tests/: type-preservation.test.ts
dev/: CI_CD_STRATEGY.md  create-labels.sh
dev/benchmarks/: debug_cache.py  detailed_benchmark.py  profile_bfast.py  test_compression_parallel.py  test_hybrid_mode.py  test_parallel.py  test_zero_copy.py
dev/docs/: ARCHITECTURE.md  CLIENT_TYPE_TAGS.md  FINAL_SUMMARY.md  GIL_ANALYSIS.md  INDEX.md  OPTIMIZATIONS.md  OPTIMIZATIONS_README.md  PRESENTATION.md  SUMMARY.md  TEST_RESULTS.md
dev/performance_history/: 2026-02-07_performance_test.md  README.md
dev/tests/: integration_test.sh
docs/: frontend.md  getting_started.md  index.md  optimizations.md  performance.md  specification.md  troubleshooting.md
docs/pt/: frontend.md  getting_started.md  index.md  mkdocs.yml
docs/pt/docs/: getting_started.md  index.md  performance.md  troubleshooting.md
examples/: demo.py  optimizations.py
python/: b_fast.pyi
python/b_fast/: __init__.py  _b_fast.pyi  integration.py
src/: allocator.rs  errors.rs  lib.rs
tests/: test_basic.py  test_decode.py  test_extended_types.py  test_integration_types.py
