[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "bfast-py"
version = "1.0.7"
description = "⚡ B-FAST (Binary Fast Adaptive Serialization Transfer) - Protocolo de serialização binária de ultra-alta performance, desenvolvido em Rust para o ecossistema Python e TypeScript"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "marcelomarkus"}
]
keywords = ["serialization", "binary", "fast", "rust", "pydantic", "numpy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "numpy",
    "lz4>=4.3.3",
]

[project.urls]
Homepage = "https://github.com/marcelomarkus/b-fast"
Documentation = "https://marcelomarkus.github.io/b-fast/"
Repository = "https://github.com/marcelomarkus/b-fast"
Issues = "https://github.com/marcelomarkus/b-fast/issues"

[project.optional-dependencies]
fastapi = ["fastapi"]
dev = [
    "matplotlib>=3.7.5",
    "orjson>=3.10.15",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=0.26.1",
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["b_fast"]
